# tokenmeter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: tokenmeter.md
docs/project/: DECISIONS.md  STATUS.md  project.yaml
docs/project/requirements/: TOKENMETER-001.md  TOKENMETER-002.md  TOKENMETER-003.md  TOKENMETER-004.md
scripts/: install.sh
src/tokenmeter/: __init__.py  __main__.py  collectors.py  records.py  server.py  storage.py  summary.py
tests/: test_tokenmeter.py
