[project]
name = "tokenmeter"
version = "0.1.0"
description = "Local token usage collector and lightweight multi-host aggregation server."
requires-python = ">=3.10"

[project.scripts]
tokenmeter = "tokenmeter.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

